# Owonero

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  blockchain copy.json  build-debug.ps1  build.ps1  build.py  build.rs  config.json  go.mod  go.sum  index.html  mainwallet  owonero-go-archived.7z  requirements.txt  start.bat  wallet copy.json
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release-unstable.yml  release.yml
configs/: frpc.toml
docs/: BUILD.md  TROUBLESHOOTING.md
main/: .gitignore
main/src/: blockchain.go  daemon.go  main.go  miner.go  wallet.go
owonero-go-archived/: go.mod
owonero-go-archived/src/: main.go  miner.go  miner_tui.go  update.go
src/: blockchain.go  blockchain.py  blockchain.rs  completions.rs  config.rs  daemon.go  daemon.py  daemon.rs  http_api.rs  main.go  main.py  main.rs  miner.go  miner.py  miner.rs  miner_tui.py  miner_ui.rs  update.go  update.rs  utils.go  utils.py  wallet.go  wallet.py  wallet.rs  wallet_tui.go  wallet_tui.py  wallet_ui.rs  web_stats.go  web_stats.py  ws_client.rs
static/: index.html
wallet/: go.mod  main.go
