[package]
name = "owonero-rs"
version = "0.4.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
ring = "0.17"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio-util = "0.7"
colored = "2.0"
ratatui = "0.26"
crossterm = "0.27"
semver = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = 0
incremental = false
overflow-checks = false
