[package]
name = "owonero"
version = "0.4.2"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
ring = "0.17"
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.2"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
zip = "6.0.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0.17"
async-trait = "0.1"
tokio-util = "0.7"
colored = "3.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
semver = "1.0"
libc = "0.2"
dirs = "6.0.0"
clap_complete = "4.5.60"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = 0
incremental = false
overflow-checks = false
